--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular2-text-mask": "^9.0.0",
+    "bootstrap": "^5.1.3",
+    "flickity": "^2.2.2",
+    "jquery": "^3.6.0",
+    "ng-image-slider": "^2.8.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
