--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "flickity": "^2.2.2",
     "jquery": "^3.6.0",
     "ng-image-slider": "^2.8.0",
+    "ngx-owl-carousel-o": "^7.0.1",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
