--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular2-flash-messages": "^3.0.1",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.1.3",
     "flickity": "^2.2.2",
